--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <title>Travel</title>
 </head>
 <body>
+    <!--============== MENU ==============-->
     <header class="header" id="header">
         <nav class="nav container">
             <a href="#" class="nav__logo">Travel</a>
@@ -45,6 +46,49 @@
             </div>
         </nav>
     </header>
+
+    <main class="main">
+        <!--============== HOME ==============-->
+        <section class="home" id="home">
+            <img src="img/home1.jpg" alt="photo of a boat in the ocean" class="home__img">
+
+            <div class="home__container container grid">
+                <div class="home__data">
+                    <span class="home__data-subtitle">Discover your place</span>
+                    <h1 class="home__data-title">Explore The <br> Best <b>Beautiful <br> Beaches</b></h1>
+                    <a href="#" class="button">Explore</a>
+                </div>
+
+                <div class="home__social">
+                    <a href="https://www.facebook.com/" target="_blank" class="home__social-link">
+                        <i class="ri-facebook-box-fill"></i>
+                    </a>
+
+                    <a href="https://www.instagram.com/" target="_blank" class="home__social-link">
+                        <i class="ri-instagram-fill"></i>
+                    </a>
+
+                    <a href="https://twitter.com/" target="_blank" class="home__social-link">
+                        <i class="ri-twitter-fill"></i>
+                    </a>
+                </div>
+
+                <div class="home__info">
+                    <div>
+                        <span class="home__info-title">5 best places to visit</span>
+                        <a href="" class="button button--flex button--link home__info-button">
+                            More <i class="ri-arrow-right-line"></i>
+                        </a>
+                    </div>
+
+                    <div class="home__info-overlay">
+                        <img src="img/home2.jpg" alt="another photo of a boat in the ocean" class="home__info-img">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+    </main>
     
     <!-- SWIPER JS -->
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
