--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,6 +17,7 @@
 
     <title>Travel</title>
 </head>
+
 <body>
     <!--============== MENU ==============-->
     <header class="header" id="header">
@@ -88,12 +90,36 @@
             </div>
         </section>
 
+        <!--============== ABOUT ==============-->
+        <section class="about section" id="about">
+            <div class="about__container container grid">
+                <div class="about__data">
+                    <h2 class="section__title about__title">More Information <br> About The Best Beaches</h2>
+                    <p class="about__description">
+                        You can find the most beautiful and pleasant places at the best prices with special discounts,
+                        you choose the place we will guide you all the way to wait, get your place now.
+                    </p>
+                    <a href="#" class="button">Reserve a place</a>
+                </div>
+
+                <div class="about__img">
+                    <div class="about__img-overlay">
+                        <img src="img/about1.jpg" alt="" class="about__img-one">
+                    </div>
+
+                    <div class="about__img-overlay">
+                        <img src="img/about2.jpg" alt="" class="about__img-two">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
-    
+
     <!-- SWIPER JS -->
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 
     <!-- JS -->
     <script src="js/main.js"></script>
 </body>
+
 </html>
