--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </header>
 
     <main class="main">
-        <!--============== HOME ==============-->
+        <!--================= HOME =================-->
         <section class="home" id="home">
             <img src="img/home1.jpg" alt="photo of a boat in the ocean" class="home__img">
 
@@ -90,7 +90,7 @@
             </div>
         </section>
 
-        <!--============== ABOUT ==============-->
+        <!--================= ABOUT =================-->
         <section class="about section" id="about">
             <div class="about__container container grid">
                 <div class="about__data">
@@ -109,6 +109,51 @@
 
                     <div class="about__img-overlay">
                         <img src="img/about2.jpg" alt="" class="about__img-two">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!--================= DISCOVER =================-->
+        <section class="discover section" id="discover">
+            <h2 class="section__title">Discover the most <br> attractive places</h2>
+
+            <div class="discover__container container swiper-container">
+                <div class="swiper-wrapper">
+                    <!--================= DISCOVER 1 =================-->
+                    <div class="discover__card swiper-slide">
+                        <img src="img/discover1.jpg" alt="" class="discover__img">
+                        <div class="discover__data">
+                            <h2 class="discover__title">Bali</h2>
+                            <span class="discover__description">24 tours available</span>
+                        </div>
+                    </div>
+
+                    <!--================= DISCOVER 2 =================-->
+                    <div class="discover__card swiper-slide">
+                        <img src="img/discover2.jpg" alt="" class="discover__img">
+                        <div class="discover__data">
+                            <h2 class="discover__title">Hawaii</h2>
+                            <span class="discover__description">15 tours available</span>
+                        </div>
+                    </div>
+
+                    <!--================= DISCOVER 3 =================-->
+                    <div class="discover__card swiper-slide">
+                        <img src="img/discover3.jpg" alt="" class="discover__img">
+                        <div class="discover__data">
+                            <h2 class="discover__title">Hvar</h2>
+                            <span class="discover__description">18 tours available</span>
+                        </div>
+                    </div>
+
+                    <!--================= DISCOVER 4 =================-->
+                    <div class="discover__card swiper-slide">
+                        <img src="img/discover4.jpg" alt="" class="discover__img">
+                        <div class="discover__data">
+                            <h2 class="discover__title">Whitehaven</h2>
+                            <span class="discover__description">32 tours available</span>
+                        </div>
                     </div>
                 </div>
             </div>
