Scroll up button and active-link

--- a/index.html
+++ b/index.html
@@ -459,10 +459,15 @@
         </div>
     </footer>
 
-    <!-- SWIPER JS -->
+    <!--================= SCROLL UP =================-->
+    <a href="#" class="scrollup" id="scroll-up">
+        <i class="ri-arrow-up-line scrollup__icon"></i>
+    </a>
+
+    <!--================= SWIPER JS =================-->
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 
-    <!-- JS -->
+    <!--================= JS =================-->
     <script src="js/main.js"></script>
 </body>
 
